--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!--Proyecto 2-->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="proyect">
-          <img src="img/rarg.png" alt="" class="proyect-img">
+          <img src="img/arg1.png" alt="" class="proyect-img">
           <div class="title-proyect">
             <h5>Argento</h5>
           </div>
